# mlops_exercises

./: .gitignore  LICENSE  README.md  data.dvc  pyproject.toml  requirements.txt  tasks.py  test_model.ckpt
.devcontainer/: devcontainer.json  post_create.sh
.dvc/: config
.github/workflows/: linting.yaml  pre-commit-update.yaml  tests.yaml
S3_exercises/: config.yaml  reproducibility_tester.py  vae_mnist.py
S3_exercises/conf/: config.yaml
S3_exercises/conf/experiment/: exp1.yaml  exp2.yaml  exp3.yaml
S3_exercises/conf/optimizer/: sgd.yaml
S3_exercises/vae_solution/: vae_mnist.py
S4_exercises/: Read_profiling.py  my_logger.py  pytorch_profiler_test.py  vae_mnist_bugs.py  vae_mnist_my_profiler.py  vae_mnist_working.py
configs/: config.yaml  consume.yaml  evaluate.yaml  sweep.yaml
configs/model/: cnn.yaml
configs/optimizer/: adam.yaml
configs/training/: default.yaml
data/raw/: train_target_0.pt  train_target_1.pt  train_target_2.pt  train_target_3.pt  train_target_4.pt  train_target_5.pt  train_target_6.pt  train_target_7.pt  train_target_8.pt  train_target_9.pt
dockerfiles/: api.dockerfile  evaluate.dockerfile  evaluate_DVC.dockerfile  evaluate_entrypoint.sh  train.dockerfile  train_CUDA.dockerfile  train_DVC.dockerfile  train_entrypoint.sh  train_tutorial.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
final_exercise/: data.py  main.py
outputs/2026-01-06/09-44-59/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-06/10-01-35/.hydra/: hydra.yaml
outputs/2026-01-06/10-05-39/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-06/10-06-18/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-06/10-07-11/.hydra/: hydra.yaml
outputs/2026-01-06/10-24-32/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-07/14-58-43/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-07/15-02-06/.hydra/: hydra.yaml
outputs/2026-01-07/15-08-04/.hydra/: hydra.yaml
outputs/2026-01-07/16-23-45/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-07/16-35-13/.hydra/: hydra.yaml
outputs/2026-01-07/16-43-02/.hydra/: hydra.yaml
outputs/2026-01-07/16-43-46/.hydra/: hydra.yaml  overrides.yaml
outputs/2026-01-07/17-41-49/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-08/08-11-58/.hydra/: hydra.yaml
outputs/2026-01-08/08-12-59/.hydra/: hydra.yaml
outputs/2026-01-08/11-34-33/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-34-58/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-36-21/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-39-03/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-39-14/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-39-25/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-40-38/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-41-51/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-43-05/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-44-24/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-45-48/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-47-06/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-08/11-48-29/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-10/10-09-42/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-10/10-15-12/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-10/10-18-15/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/mlops_exercises/: consume_model.py  data.py  download_model.py  evaluate.py  greetings.py  iris_classifier.py  link_best_models.py  model.py  train.py  train_and_eval.py  visualize.py
tests/: test_data.py
