[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_exercises"
version = "0.0.1"
description = "DTU MLOps course exercises"
authors = [
  { name = "Mathias Herl\u00f8v Lund", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.127.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch==2.9.1",
    "torchvision>=0.15.0",
    "typer==0.21.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.10",
    "mkdocstrings-python==1.12.2",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["data", "model"]

[tool.coverage.run]
omit = ["tests/*"]
