[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_exercises"
version = "0.0.1"
description = "DTU MLOps course exercises"
authors = [
  { name = "Mathias Herl\u00f8v Lund", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.0.0",
    "dvc-gs>=3.0.0",
    "fastapi==0.128.0",
    "hydra-core>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch==2.9.1",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.15.0",
    "typer==0.21.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.1",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.14.10",
    "mkdocstrings-python==2.0.1",
    "snakeviz>=2.2.2",
]


# Platform-specific PyTorch configuration
# Linux: CUDA 13.0 from pytorch index
# macOS: CPU-only from pytorch-cpu index (fallback when CUDA not available)

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["data", "model"]

[tool.coverage.run]
omit = ["tests/*"]

[project.scripts]
train = "mlops_exercises.train:train"
evaluate = "mlops_exercises.evaluate:app"
visualize = "mlops_exercises.visualize:app"
greetings = "mlops_exercises.greetings:app"
iris-classifier = "mlops_exercises.iris_classifier:app"
